# wind-turbine-fault-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: README.md
docs/: architecture.md  data_pipeline.md
notebooks/: 01_exploratory_data_analysis.ipynb  02_data_combination.ipynb
src/wtfd/: config.py  data.py  preprocessing.py
src/wtfd/config/: config.py
src/wtfd/data_processing/: discovery.py  preprocessing.py  schema.py
src/wtfd/utils/: logging_utils.py
